--- a/sections/equicontinuity.tex
+++ b/sections/equicontinuity.tex
@@ -101,6 +101,7 @@
 	\begin{equation*}
 		\forall \varepsilon > 0\ \exists \delta > 0: \forall x , y \in X, t \in T:  d(x, y) < \delta  \Rightarrow d(tx, ty) < \varepsilon.
 	\end{equation*}
+	A factor $\pi : (X,T) \to (Y,T)$ is called \emph{equicontinuous}, if and only if $(Y,T)$ is equicontinuous.
 \end{definition}
 
 \begin{proposition}[Equicontinuity is independent on the choice of metric]
