--- a/presentation/references.bib
+++ b/presentation/references.bib
@@ -7,3 +7,27 @@ number = {4},
 pages = {1196-1221},
 year = {2004},
 }
+@Article{HK2023,
+author={Hermle, Patrick
+and Kreidler, Henrik},
+title={A Halmos--von Neumann Theorem for Actions of General Groups},
+journal={Applied Categorical Structures},
+year={2023},
+month={Sep},
+day={08},
+volume={31},
+number={5},
+pages={38},
+issn={1572-9095},
+doi={10.1007/s10485-023-09743-y},
+url={https://doi.org/10.1007/s10485-023-09743-y}
+}
+
+@ARTICLE{Garcia-Ramos2024,
+  title         = "Coincidence rank and multivariate equicontinuity",
+  author        = "Garc{\'\i}a-Ramos, Felipe and Le{\'o}n-Torres, Irma",
+  year          =  2024,
+  archivePrefix = "arXiv",
+  primaryClass  = "math.DS",
+  eprint        = "2411.03529"
+}
