--- a/presentation/sections/mef.tex
+++ b/presentation/sections/mef.tex
@@ -42,7 +42,7 @@
   \begin{equation*}
     \begin{split}
       &U : T \longrightarrow L(C(X)) \\
-      &(U(t) f)(x) &:= f(t^{-1}x).
+      &(U(t) f)(x) := f(t^{-1}x).
     \end{split}
   \end{equation*}
    \end{definition}
@@ -50,8 +50,8 @@
    \begin{definition}[Eigenvalue, Eigenfunction]
    \begin{equation*}
     \begin{split}
-      0 \neq f \in C(X) \ \text{\emph{eigenfunction} of} \ U \ \text{to \emph{eigenvalue}} \ \chi \in T^*   \\
-: \Leftrightarrow f \in \ker (U-\chi):= \bigcap_{t \in T} \ker (U(t)- \chi (t)I).
+      &0 \neq f \in C(X) \ \text{\emph{eigenfunction} of} \ U \ \text{to \emph{eigenvalue}} \ \chi \in T^*   \\
+ &:\Leftrightarrow f \in \ker (U-\chi):= \bigcap_{t \in T} \ker (U(t)- \chi (t)I).
     \end{split}
       \end{equation*}
    \end{definition}
