some rpr slides

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -16,7 +16,7 @@
 \usepackage{graphicx}
 \usepackage{subfiles}
 \usepackage{tikz}
-\usetikzlibrary{cd}
+\usetikzlibrary{cd,calc}
 
 \tikzcdset{every label/.append style = {font = \small}}
 \numberwithin{equation}{section}
@@ -85,6 +85,7 @@ style=authoryear,
 \endgroup
 
 \subfile{sections/mef.tex}
+\subfile{sections/rpr.tex}
 
 
 \section*{}
