plot for one example

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -17,6 +17,9 @@
 \usepackage{subfiles}
 \usepackage{tikz}
 \usetikzlibrary{cd,calc}
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.18} % or your version
+
 
 \tikzcdset{every label/.append style = {font = \small}}
 \numberwithin{equation}{section}
