--- a/main.tex
+++ b/main.tex
@@ -91,6 +91,7 @@ sorting=ynt
 \DeclareMathOperator{\supp}{supp}
 \DeclareMathOperator{\range}{range}
 \DeclareMathOperator{\pr}{pr}
+\DeclareMathOperator{\Id}{Id}
 
 \newcommand{\catname}[1]{\mathbf{#1}}
 \newcommand{\Ac}{\mathcal{A}}
