add command for indicator functions

--- a/main.tex
+++ b/main.tex
@@ -97,6 +97,7 @@ sorting=ynt
 \newcommand{\Ac}{\mathcal{A}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
+\newcommand{\1}{\mathbf{1}}
 
 \title{MEF}
 \date{\today}
