--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -84,6 +84,7 @@ style=authoryear,
     \end{frame}
 \endgroup
 
+\subfile{sections/equicontinuity.tex}
 \subfile{sections/mef.tex}
 \subfile{sections/rpr.tex}
 
