--- a/presentation/tikz/rpr-ex1.tex
+++ b/presentation/tikz/rpr-ex1.tex
@@ -5,11 +5,11 @@
     \draw (2*\x,0.1) -- (2*\x,-0.1) node[below] {\x};
   }
 
-  \draw[thick, red] (0,0) circle (15pt);
+  \draw[thick, red, dotted] (0,0) circle (15pt);
   \fill[red] (0,0) circle (2pt);
   \fill[red!50] (0.3,0) circle (2pt);
 
-  \draw[thick, blue] (2,0) circle (15pt);
+  \draw[thick, blue, dotted] (2,0) circle (15pt);
   \fill[blue] (2,0) circle (2pt);
   \fill[blue!50] (1.7,0) circle (2pt);
 \end{tikzpicture}
