--- a/presentation/tikz/rpr-ex2.tex
+++ b/presentation/tikz/rpr-ex2.tex
@@ -12,5 +12,5 @@
   \fill[blue] (2,0) circle (2pt);
   \fill[blue!50] (1.9,0) circle (2pt);
 
-  \draw[thick, green] (1.8,0) circle (15pt);
+  \draw[thick, dotted] (1.7,0) circle (15pt);
 \end{tikzpicture}
