Added graphics for example skew-rotations

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -90,6 +90,7 @@ style=authoryear,
 \subfile{sections/equicontinuity.tex}
 \subfile{sections/mef.tex}
 \subfile{sections/rpr.tex}
+\subfile{sections/skew-rotation.tex}
 
 
 \section*{}
