--- a/presentation/sections/mef.tex
+++ b/presentation/sections/mef.tex
@@ -63,7 +63,7 @@
   \end{equation*}
 \end{definition}
 \pause 
-  \begin{alertblock}{Theorem}
+  \begin{alertblock}{Theorem}%
   \begin{equation*}
     (X,T) \ \text{is equicontinuous} \Leftrightarrow (X,T) \ \text{has discrete spectrum}
   \end{equation*}
@@ -83,7 +83,7 @@
 \end{frame}
 \begin{frame}
   \begin{columns}
-    \begin{column}{0.5\textwidth}
+    \begin{column}{0.4\textwidth}
   \begin{example}[MEF of skew rotation]
 Let $a \in \mathbb{T}$.
 \begin{equation*}
@@ -110,9 +110,10 @@ Let $a \in \mathbb{T}$.
   \end{equation*}
 \end{example}
     \end{column}
-    \begin{column}{0.5\textwidth}
-      picture here 
-    \end{column}
+    \begin{column}{0.6\textwidth}
+      \centering
+      \includegraphics[width=8cm]{imgs/test.pdf}
+     \end{column}
   \end{columns}
 \end{frame}
 
