fixed bug causing contents slide to vanish in beamer

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -18,7 +18,7 @@
 \usepackage{tikz}
 \usetikzlibrary{cd,calc}
 \usepackage{pgfplots}
-\pgfplotsset{compat=1.18} % or your version
+%\pgfplotsset{compat=1.18} % or your version # this breaks beamer (contents stuff and causes error)
 
 
 \tikzcdset{every label/.append style = {font = \small}}
