updated kronecker factor part

--- a/main.tex
+++ b/main.tex
@@ -92,6 +92,7 @@ sorting=ynt
 \DeclareMathOperator{\range}{range}
 \DeclareMathOperator{\pr}{pr}
 \DeclareMathOperator{\Id}{Id}
+\newcommand{\clin}{\overline{\lin}}
 
 \newcommand{\catname}[1]{\mathbf{#1}}
 \newcommand{\Ac}{\mathcal{A}}
