small fix, auslander in reference

--- a/references.bib
+++ b/references.bib
@@ -32,3 +32,10 @@ url={https://doi.org/10.1007/s10485-023-09743-y}
   primaryClass  = "math.DS",
   eprint        = "2411.03529"
 }
+
+@book{Auslaner,
+  title="Minimal Flows and their Extensions",
+  author="Joseph Auslander",
+  year="1988",
+  publisher = {Noth-Holland},
+}
