--- a/sections/rpr.tex
+++ b/sections/rpr.tex
@@ -74,7 +74,6 @@ The next construction is a counterexample.
   Also the singeltons $\{ 0 \}, \{ 1 \}$ and $\{ 2 \}$ are closed invariant subspaces.
   So the TDS is not minimal.
 
-  {\color{red} Hier ein Bild}
   It is easy to see that $0$ and $1$ are a regionally proximal pair,
   since one can choose a point arbitrarily larger than $0$ and smaller than $1$.
   Both will tend to $1$ but never reach $1$ as $t$ gets bigger,
@@ -174,7 +173,7 @@ The next construction is a counterexample.
 \end{theorem}
 
 \begin{proof}
-  See Auslander p.130 Thm. 8.
+  See \cite[p.130, Thm. 8.]{Auslaner}.
 \end{proof}
 
 \begin{example}
@@ -198,7 +197,7 @@ The next construction is a counterexample.
 	\begin{align*}
 		0 < y_2 - y_1 - \frac{n(n-1)}{2}b < \frac{\varepsilon}{2}.
 	\end{align*}
-	Then $([b+x], [y_1]) \in \operatorname{B}_\varepsilon[x], [y_1])$ and $([x],[y_2]) \in \operatorname{B}_\varepsilon([x], [y_2])$ and we have
+	Then $([b+x], [y_1]) \in \operatorname{B}_\varepsilon([x], [y_1])$ and $([x],[y_2]) \in \operatorname{B}_\varepsilon([x], [y_2])$ and we have
 	\begin{align*}
 		&d_{\mathbb{T}^2}(n([b+x], [y_1]), n([x], [y_2]))\\
 		= &d_{\mathbb{T}^2}(([na+b+x], [\frac{n(n-1)}{2}a + n(b+x) + y_1]), ([na+x], [\frac{n(n-1)}{2}a + nx + y_2]))\\
