--- a/presentation/sections/rpr.tex
+++ b/presentation/sections/rpr.tex
@@ -149,7 +149,7 @@ The equicontinuous factor is the identity map with $\Delta(X)$ as ICER.
     Recall the torus example from above.
     We consider the two-dimensional torus with the product-$1$-norm
     and action
-    \[ \alpha : \mathbb{T} \to \mathbb{T}, \alpha([x], [y]) = ([x + a], [y + a]). \]
+    \[ \alpha : \mathbb{T} \to \mathbb{T}, \alpha([x], [y]) = ([x + a], [x + y]). \]
     with $a \in \mathbb{R}$
 
   \end{example}
